--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,12 @@ wgpu = "0.15.0"
 env_logger = "0.10.0"
 log = "0.4"
 pollster = "0.3.0"
+clap = { version = "4.1.13", features = ["derive"] }
+cgmath = "0.18"
+bytemuck = { version = "1.12", features = [ "derive" ] }
+anyhow = "1.0" # NEW!
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
