--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.1.13", features = ["derive"] }
 cgmath = "0.18"
 bytemuck = { version = "1.12", features = [ "derive" ] }
 anyhow = "1.0" # NEW!
+instant = "0.1.12"
 
 [dependencies.image]
 version = "0.24"
